# includes-hidden-sublibraries

./: includes-sub-libraries.cabal
lib1/: Lib1.hs
lib2/: Lib2.hs
